--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,102 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Learning Bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
     <script src="index.js"></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <nav class="navbar navbar-inverse">
+                <a class="navbar-brand" href="#">LOGO</a>
+                <a class="navbar-brand nav-menu" href="#">MENU</a>
+            </nav>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 footer slider">
+                <p>SLIDER</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="row">
+                    <!-- 3 -->
+                    <div class="col-md-3 col-sm-6 info-box">
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, hic quibusdam, aliquid debitis
+                            aut commodi eaque eligendi velit dicta tempore quo labore ut deleniti nemo quia architecto! Fuga,
+                            et ipsa! Nam incidunt</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 info-box">
+                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque itaque odit quis adipisci quam praesentium!
+                            Eum voluptas atque ex et architecto vero ea recusandae quia natus aliquid? Animi, fugiat laborum!</div>
+                    <div class="col-md-3 col-sm-6 info-box">
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis unde reprehenderit sunt minima beatae
+                            pariatur autem facilis architecto adipisci! Nam incidunt, repudiandae quia omnis a minus dicta
+                            blanditiis quas iusto!</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 info-box">
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore nesciunt, odio ipsum et harum adipisci,
+                            tenetur quas porro rem, quis illo enim unde sapiente! Vitae error molestiae corrupti perspiciatis
+                            veritatis? Nam incidunt</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- 2 -->
+                    <div class="col-md-6 info-box">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae enim amet ratione, aspernatur
+                            nostrum nam, ad saepe placeat possimus ut iste quidem, incidunt in unde officia voluptatibus
+                            ea. Odio, quidem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptate
+                            enim dolorem adipisci. Exercitationem tenetur hic, velit ut earum aut eaque, dolores rerum, asperiores
+                            explicabo nam optio ullam in at?</p>
+                    </div>
+                    <div class="col-md-6 info-box">
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus soluta suscipit quibusdam
+                            id culpa repellat, incidunt ullam facere odio, sapiente natus ab animi, neque alias. Ad expedita
+                            explicabo necessitatibus architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veniam, voluptas! Aperiam enim, placeat deleniti earum qui dolore sint laborum molestias magnam
+                            hic explicabo non deserunt a illum vel id at!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="row">
+                    <aside class="col-md-12 large-info-box">
+                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet consequuntur maiores consectetur vitae
+                            eligendi. Et, repellendus voluptates? Rerum aperiam itaque architecto repellendus aliquid, libero
+                            temporibus, exercitationem assumenda alias deserunt aliquam!Quod totam veniam eius itaque reprehenderit
+                            repudiandae delectus praesentium iure. Voluptate voluptatum ut veniam neque? Quo eaque architecto
+                            obcaecati? Eos dolorum nisi omnis minus atque quod possimus placeat ex accusantium? Lorem ipsum
+                            dolor sit amet, consectetur adipisicing elit. Exercitationem et, voluptatem odio voluptatibus,
+                            delectus ipsa earum culpa alias sed at doloremque nesciunt molestiae maxime cupiditate, assumenda
+                            nobis debitis ex consequatur!Nisi repudiandae amet, ad quaerat molestiae harum molestias accusamus
+                            accusantium nam consectetur magni consequuntur possimus, non culpa, nesciunt ab deserunt quisquam
+                            voluptate laudantium minima! Doloremque ullam provident perferendis! Libero, odio.</p>
+                    </aside>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <footer class="col-md-12 footer">
+                <p>FOOTER</p>
+            </footer>
+        </div>
+    </div>
 </body>
+
 </html>
