--- a/src/index.html
+++ b/src/index.html
@@ -34,36 +34,37 @@
             <div class="col-md-8">
                 <div class="row">
                     <!-- 3 -->
-                    <div class="col-md-3 col-sm-6 info-box">
-                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, hic quibusdam, aliquid debitis
+                    <div class="col-md-3 col-sm-6 ">
+                        <p class="info-box"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, hic quibusdam, aliquid debitis
                             aut commodi eaque eligendi velit dicta tempore quo labore ut deleniti nemo quia architecto! Fuga,
                             et ipsa! Nam incidunt</p>
                     </div>
-                    <div class="col-md-3 col-sm-6 info-box">
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque itaque odit quis adipisci quam praesentium!
-                            Eum voluptas atque ex et architecto vero ea recusandae quia natus aliquid? Animi, fugiat laborum!</div>
-                    <div class="col-md-3 col-sm-6 info-box">
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis unde reprehenderit sunt minima beatae
+                    <div class="col-md-3 col-sm-6 ">
+                        <p class="info-box"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque itaque odit quis adipisci quam praesentium!
+                            Eum voluptas atque ex et architecto vero ea recusandae quia natus aliquid? Animi, fugiat laborum!</p>
+                    </div>
+                    <div class="col-md-3 col-sm-6 ">
+                        <p class="info-box"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis unde reprehenderit sunt minima beatae
                             pariatur autem facilis architecto adipisci! Nam incidunt, repudiandae quia omnis a minus dicta
                             blanditiis quas iusto!</p>
                     </div>
-                    <div class="col-md-3 col-sm-6 info-box">
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore nesciunt, odio ipsum et harum adipisci,
+                    <div class="col-md-3 col-sm-6 ">
+                        <p class="info-box"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore nesciunt, odio ipsum et harum adipisci,
                             tenetur quas porro rem, quis illo enim unde sapiente! Vitae error molestiae corrupti perspiciatis
                             veritatis? Nam incidunt</p>
                     </div>
                 </div>
                 <div class="row">
                     <!-- 2 -->
-                    <div class="col-md-6 info-box">
-                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae enim amet ratione, aspernatur
+                    <div class="col-md-6 ">
+                        <p class="info-box"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae enim amet ratione, aspernatur
                             nostrum nam, ad saepe placeat possimus ut iste quidem, incidunt in unde officia voluptatibus
                             ea. Odio, quidem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptate
                             enim dolorem adipisci. Exercitationem tenetur hic, velit ut earum aut eaque, dolores rerum, asperiores
                             explicabo nam optio ullam in at?</p>
                     </div>
-                    <div class="col-md-6 info-box">
-                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus soluta suscipit quibusdam
+                    <div class="col-md-6 ">
+                        <p class="info-box"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus soluta suscipit quibusdam
                             id culpa repellat, incidunt ullam facere odio, sapiente natus ab animi, neque alias. Ad expedita
                             explicabo necessitatibus architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Veniam, voluptas! Aperiam enim, placeat deleniti earum qui dolore sint laborum molestias magnam
@@ -73,8 +74,8 @@
             </div>
             <div class="col-md-4">
                 <div class="row">
-                    <aside class="col-md-12 large-info-box">
-                        <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet consequuntur maiores consectetur vitae
+                    <aside class="col-md-12 large-">
+                        <p class="info-box"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet consequuntur maiores consectetur vitae
                             eligendi. Et, repellendus voluptates? Rerum aperiam itaque architecto repellendus aliquid, libero
                             temporibus, exercitationem assumenda alias deserunt aliquam!Quod totam veniam eius itaque reprehenderit
                             repudiandae delectus praesentium iure. Voluptate voluptatum ut veniam neque? Quo eaque architecto
